<resources>
    <!-- Existing app name -->
    <string name="app_name">Sri Lanka University News</string>


    <!-- Login screen strings -->
    <string name="username_hint">User Name</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="not_registered_text">Not Registered?</string>
    <string name="register_here_text">Register here</string> <!-- NEW or UPDATED string -->
    <!-- <string name="create_account_text">Create an account</string> --> <!-- You can remove this if not used elsewhere -->


    <!-- Sign Up screen strings -->
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="email_hint">E-mail</string>
    <string name="signup_button_text">Sign Up</string>
    <!-- in app/src/main/res/values/strings.xml -->
    <string name="app_name_full">Sri Lanka University News</string> <!-- Or your preferred full app name -->
    <string name="developer_info">Developer Info</string>
    <string name="exit">Exit</string>
    <string name="personal_statement">Personal Statement</string>
    <string name="release_version">Release version:</string>
    <string name="profile_image_desc">User profile image</string>


</resources>
